# jsip-racing-game

./: .gitignore  README.md  dune-project  jsip-racing-game.opam  spec.md
app/client/hud/: dune  hud.ml  hud.mli
app/client/render/: camera.ml  camera.mli  dune  palette.ml  palette.mli  prim.ml  prim.mli  render.ml  render.mli  sprites.ml  sprites.mli
app/client/sprites/: dune  sprites.ml  sprites.mli
app/client/src/: client_frame.ml  client_frame.mli  connection.ml  connection.mli  controls.ml  controls.mli  dune  input.ml  input.mli  track_console.ml  track_console.mli
app/client/track_view/: dune  track_view.ml  track_view.mli
doc/: map-design.md  rpc-protocol.md  running-the-server.md
lib/gateway/src/: dune  game_state.ml  game_state.mli  server.ml  (+6 more)
lib/map/: cell.ml  cell.mli  checkpoint.ml  checkpoint.mli  dune  environment.ml  environment.mli  feature.ml  feature.mli  feature_id.ml  feature_id.mli  game_map.ml  game_map.mli  map_state.ml  map_state.mli  pose.ml  pose.mli  racing_map.ml  racing_map.mli  surface.ml  surface.mli  tick.ml  tick.mli  track_action.ml  track_action.mli  vec2.ml  vec2.mli
lib/types/: driver_input.ml  driver_input.mli  dune  effect.ml  effect.mli  heading.ml  heading.mli  interference.ml  interference.mli  player.ml  player.mli  player_id.mli  player_name.ml  player_name.mli  position.ml  position.mli  powerup.ml  powerup.mli  race_status.ml  race_status.mli  racing_types.ml  role.ml  role.mli  speed.ml  speed.mli  team.ml  team.mli  team_id.ml  team_id.mli  tick.ml  tick.mli  velocity.ml  velocity.mli
maps/: castle_run.sexp
(+27 files in other folders)
